# capitube

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tauri.conf.json  to-do list.md
app/: index.html  package.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src-tauri/templates/: model.html.tera
models/xisen/: model.json
server/: Cargo.toml
server/src/: capitube.rs  lib.rs  model.rs  routes.rs  transform.rs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
