[package]
name = "capitube"
description = ""
version = "0.0.1"
edition = "2021"

[[bin]]
name = "app"
path = "app/src-tauri/src/main.rs"

[lib]
name = "server"
path = "server/src/lib.rs"

[workspace]
members = [
    "server",
    "app/src-tauri"
]

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
rocket = {version= "=0.5.0-rc.3", features= ["json"] }
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.28"
local-ip-address = "0.5.3"
