[package]
name = "app"
version = "0.0.1"
description = "CapiTube: animate simple avatars"
authors = ["NyshimoriMizuki"]
license = ""
repository = "https://github.com/NyshimoriMizuki/capitube"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
server = { path = "../../server"}
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-address = "0.5.3"
rocket = "=0.5.0-rc.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
